# docs/swagger.json
@@ -231,6 +231,15 @@
                         "name": "id",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "description": "Reason",
+                        "name": "reason",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.CancelReason"
+                        }
                     }
                 ],
                 "responses": {
@@ -291,6 +300,15 @@
         }
     },
     "definitions": {
+        "model.CancelReason": {
+            "type": "object",
+            "properties": {
+                "reason": {
+                    "description": "Reason for canceling the task.",
+                    "type": "string"
+                }
+            }
+        },
         "model.CheckInDTO": {
             "type": "object",
             "properties": {
