# model/CancelReason.go
@@ -1,0 +1,6 @@
+package model
+
+type CancelReason struct {
+	// Reason for canceling the task.
+	Reason string `json:"reason"`
+}
